SUBDIRS = pcube
noinst_LTLIBRARIES = libGeometry.la
libGeometry_la_SOURCES = Angles.h Circle.cpp Circle.h CubeTri.cpp CubeTri.h Geometry.h Line2D.cpp Line2D.h LineSeg.cpp LineSeg.h Plane.cpp Plane.h Point2D.cpp Point2D.h Point3D.cpp Point3D.h Sphere.cpp Sphere.h Transform2D.cpp Transform2D.h Transform3D.cpp Transform3D.h TriTri.cpp TriTri.h Vector2D.cpp Vector2D.h Vector3D.cpp Vector3D.h RayBox.c RayBox.h Ray.cpp Ray.h
libGeometry_la_LIBADD = pcube/libpcube.la 
